# ray_tracer

./: .gitignore  CMakeLists.txt  main.cpp
data/: ex_world.txt
include/: camera.hpp  color.hpp  pixel.hpp  ray.hpp  rayTracerExceptions.hpp  shape.hpp  sphere.hpp  vector_3d.hpp  world.hpp
src/: camera.cpp  color.cpp  pixel.cpp  ray.cpp  shape.cpp  sphere.cpp  vector_3d.cpp  world.cpp
